--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           command: "node snapshots.js"
         env:
-          PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
+          PERCY_TOKEN: 2f20dab76e667644c2a8a3a8b93685ed0bca3b2539270516a6d00e5a770928a9
