--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@percy/cli": "^1.0.0-beta.32",
     "@percy/script": "^1.1.0",
-    "http-server": "^0.12.3"
+    "http-server": "^0.12.3",
+    "percy": "^0.28.6"
   }
 }
